# circlebe/src/controller/thread.controller.ts
@@ -1,6 +1,7 @@
 import { Request, Response } from "express";
 import threadService from "../services/thread.service";
 import { createThreadSchema } from "../utils/schemas/thread.schema";
+import cloudinaryService from "../services/cloudinary.service";
 
 class ThreadController {
     async find(req: Request, res: Response) {
@@ -25,21 +26,29 @@ class ThreadController {
 
     async create(req: Request, res: Response) {
         /*  #swagger.requestBody = {
-                required: true,
-                content: {
-                    "application/json": {
-                        schema: {
-                            $ref: "#/components/schemas/CreateThreadDTO"
-                        }  
-                    }
+            required: true,
+            content: {
+                "multipart/form-data": {
+                    schema: {
+                        $ref: "#/components/schemas/CreateThreadDTO"
+                    }  
                 }
-            } 
-        */
+            }
+        } 
+    */
 
         try {
-            const value = await createThreadSchema.validateAsync(req.body);
 
-            const threads = await threadService.createThread(value);
+            const user = (req as any).user;
+            const image = await cloudinaryService.uploadSingle(req.file as Express.Multer.File)
+            const body = {
+                ...req.body,
+                image: image.secure_url
+            }
+            const value = await createThreadSchema.validateAsync(body);
+            const threads = await threadService.createThread(value, user);
+            console.log("Created thread:", threads); // Tambahkan ini untuk debug
+
             res.json(threads);
         } catch (error) {
             res.status(500).json(error);
